# imdb_dataset

./: final_project_test.ipynb
my_project/: conf.py  example.py  final_project_test.ipynb  index.rst  project_structure.txt  pyproject.toml  setup.py  summit.md
my_project/docs/: LICENSE.txt  README.md  requirements.txt
my_project/imdb_dataset/: __init__.py  api_initialize.py  movie_detail.py  movie_search.py
my_project/tests/: test_api_intialize.py  test_movie_detail.py  test_movie_search.py
